Changes for 2.1.9

New features:
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
..F....... [ZBX-7144] fixed latest data table column widths (Ivo)
A......... [ZBX-7152] fixed get method subselects not working correctly if a specific node is selected (Ivo)
..F....... [ZBX-7180] fixed right table colors (Eduard)
..F....... [ZBX-7085] fixed gettext errors when omitting the number placeholder in singular form translations (Pavels)

--------------------------------------------------------------------------------
Changes for 2.1.8

New features:
.....J.... [ZBX-6404] added support for values of type java.lang.Double when toString() returns them in scientific format (asaveljevs)
.......PS. [ZBXNEXT-78] added support for scientific notation for received values and item multipliers for items of type "Numeric (float)" (asaveljevs)
...G...PS. [ZBXNEXT-1855] dynamic display of process current activity and statistics in "ps" and "top" (Igors, Andris, wiper)
..F.....S. [ZBXNEXT-1806] changed the way nth day and nth week are calculated in maintenances (asaveljevs, Pavels)
..F....... [ZBX-7097] changed dashboard drag'n'drop widget placeholder color in the dark orange and dark blue themes (Pavels)
A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A...I..... [ZBX-7163] fixed default values for sysmaps.label_location and sysmaps_elements.label_location fields; added NOT NULL constraint to sysmaps_elements.label_location field (Sasha)
...G...PS. [ZBXNEXT-1179] fixed inconsistency in process activity time logging (Andris)
A......... [ZBX-6362] fixed proxy select interfaces (Eduard)
..F....... [ZBX-7115] improved data filtering in latest data page (Eduard)