@@ -517,7 +517,7 @@ class CApplication extends CZBXAPI {
 
 		$allowedItems = API::Item()->get(array(
 			'itemids' => $itemIds,
-			'selectHosts' => array('hostid', 'name'),
+			'selectHosts' => array('name'),
 			'output' => array('itemid', 'hostid', 'name'),
 			'editable' => true,
 			'preservekeys' => true
