@@ -560,7 +560,7 @@ class CDiscoveryRule extends CItemGeneral {
 			'discoveryids' => $srcDiscovery['itemid'],
 			'output' => API_OUTPUT_EXTEND,
 			'selectHosts' => API_OUTPUT_EXTEND,
-			'selectItems' => API_OUTPUT_EXTEND,
+			'selectItems' => array('itemid', 'type'),
 			'selectDiscoveryRule' => API_OUTPUT_EXTEND,
 			'selectFunctions' => API_OUTPUT_EXTEND,
 			'preservekeys' => true
@@ -893,7 +893,7 @@ class CDiscoveryRule extends CItemGeneral {
 		// fetch source items
 		$items = API::Item()->get(array(
 			'itemids' => $srcItemIds,
-			'output' => API_OUTPUT_EXTEND,
+			'output' => array('itemid', 'key_'),
 			'preservekeys' => true,
 			'filter' => array('flags' => null)
 		));
@@ -912,7 +912,7 @@ class CDiscoveryRule extends CItemGeneral {
 				'key_' => $itemKeys,
 				'flags' => null
 			),
-			'output' => API_OUTPUT_EXTEND,
+			'output' => array('itemid', 'key_'),
 			'preservekeys' => true
 		));
 
