@@ -135,7 +135,7 @@ if ($_REQUEST['triggerid'] > 0 && isset($_REQUEST['hostid'])) {
 	$oldTriggers = API::Trigger()->get(array(
 		'output' => array('triggerid', 'description', 'expression'),
 		'selectHosts' => array('hostid', 'host'),
-		'selectItems' => API_OUTPUT_EXTEND,
+		'selectItems' => array('itemid', 'hostid', 'key_', 'type', 'flags', 'status'),
 		'selectFunctions' => API_OUTPUT_EXTEND,
 		'triggerids' => $_REQUEST['triggerid']
 	));
@@ -154,7 +154,7 @@ if ($_REQUEST['triggerid'] > 0 && isset($_REQUEST['hostid'])) {
 		$newTriggers = API::Trigger()->get(array(
 			'output' => array('triggerid', 'description', 'expression'),
 			'selectHosts' => array('hostid', 'host'),
-			'selectItems' => API_OUTPUT_EXTEND,
+			'selectItems' => array('itemid', 'key_'),
 			'selectFunctions' => API_OUTPUT_EXTEND,
 			'filter' => array('description' => $oldTrigger['description']),
 			'hostids' => $hostid
