@@ -579,7 +579,7 @@ if (isset($_REQUEST['expression']) && $_REQUEST['dstfld1'] == 'expr_temp') {
 
 		$myItem = API::Item()->get(array(
 			'filter' => array('host' => $exprPart['host'], 'key_' => $exprPart['item'], 'flags' => null),
-			'output' => API_OUTPUT_EXTEND,
+			'output' => array('itemid'),
 			'webitems' => true
 		));
 		$myItem = reset($myItem);
@@ -615,10 +615,10 @@ if (!isset($function)) {
 
 if ($itemId) {
 	$items = API::Item()->get(array(
-		'output' => API_OUTPUT_EXTEND,
+		'output' => array('itemid', 'key_', 'name'),
 		'itemids' => $itemId,
 		'webitems' => true,
-		'selectHosts' => API_OUTPUT_EXTEND,
+		'selectHosts' => array('host'),
 		'filter' => array('flags' => null)
 	));
 	$item = reset($items);
